@@ -4,6 +4,7 @@ CHANGES-1.7.txt
 CHANGES IN CUPS V1.7.1
 
 	- Auto debug logging was broken in 1.7.0 (<rdar://problem/15331639>)
+	- Some gzip'd PPD files could not be used (<rdar://problem/15386424>)
 
 
 CHANGES IN CUPS V1.7.0
